--- a/scss/post.scss
+++ b/scss/post.scss
@@ -110,9 +110,11 @@ table.discussion-list tr th:nth-child(3), table.discussion-list tr th:nth-child(
   background-size: cover;
   background-position: center;
   z-index: 1000;
+  cursor: pointer;
 }
 
 .zoom-container{
+  width: 100% !important;
   max-height: 100%!important;
   overflow: hidden!important;
 }
